添加 Truffle 相关配置和脚本，包括 Dockerfile、编译和输出脚本，更新 .gitignore，完善 README 文档以指导用户如何使用 Truffle 编译智能合约。

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,17 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# truffle-abigen
+truffle-abigen/build/
+truffle-abigen/node_modules/
+truffle-abigen/abigenBindings/abi
+truffle-abigen/abigenBindings/bin
+truffle-abigen/*-input.json
+truffle-abigen/*.go
+truffle-abigen/*.exe
+
+# remixd
+remixd/contracts/.deps
+remixd/contracts/artifacts
+remixd/contracts/*.sol
